# BazaarBATNA

./: .gitignore  AGENT_CHANGELOG_RULES.md  Dockerfile  IMPLEMENTATION_PLAN.md  LOGS.md  README.md  SAMPLE_NEGOTIATIONS.md  SUBMISSION.md  dashboard.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  startup.sh  thing.txt  todo.json
bazaarbot_env/: __init__.py  environment.py  gym_wrapper.py  listings.py  llm_seller.py  models.py  seller.py  tasks.py
data/: __init__.py  craigslist_loader.py  generate_indian_negotiations.py  indian_negotiations.jsonl
docs/: BLOG.md  BLOG_HF.md  HF_ENDPOINT_DEPLOY.md  HIGHLIGHTS_PROVENANCE.md  SELLER_HANDOFF.md  SITE_OVERHAUL_TODO.md
eval/: build_dpo_pairs.py  eval_harness.py  judge.py  scoring.py  seller_quality.py
eval/out_v2/: summary_ollama_bestdealbot.json
nlp/: __init__.py  eval_extractor.py  extractor.py  fetch_datasets.py  keyword_patterns.py  setup_ministral.sh  templates.py
runs/20260425_130532_scoring/: config.json  metrics.jsonl  summary.json
scripts/: build_arena_replays.py  run_after_extractor.sh  run_dpo_hfjobs.sh  run_eval_hfjobs.sh  run_grpo_tells_hfjobs.sh  run_scaling_eval_hfjobs.sh  run_seller_eval_hfjobs.sh  run_sft_tells_hfjobs.sh
server/: app.py  arena.py  environment.py  leaderboard.py  llm.py  main.py  models.py  safety.py  sauda_buyer.py  seller.py  tasks.py
training/: dpo_colab.ipynb  hflog.txt  seller_handoff_colab.ipynb  seller_handoff_kaggle.ipynb  train.ipynb  train_colab.ipynb
training/v2/: dpo.py  (+3 more)
ui/: .env.production  package-lock.json  package.json
utils/: run_logger.py
(+27 files in other folders)
