[project]
name = "bazaarbatna"
version = "1.0.0"
description = "Customer-vendor price negotiation environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "openai>=1.6.0",
    "openenv-core>=0.2.0",
    "websockets>=12.0",
]

[project.scripts]
server = "server.app:main"
